fix: img overflow fix: set min-height:0 since default is auro which means a div cannot shrink below size of contents

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@ body {
 }
 
 /*-------------------
-1. Intro page
+1. Intro content
 --------------------*/
 .book-container {
   margin: 0;
@@ -129,17 +129,19 @@ body {
 }
 
 .page img {
-  width: 100%;
   height: 100%;
+  width: 100%;
   object-fit: contain;
 }
 
 .paper-scrap {
-  width: 240px;
+  max-width: 240px;
+  min-height: 0;
 }
 
 .computer-image {
-  width: 240px;
+  max-width: 240px;
+  min-height: 0;
   align-self: center;
 }
 
